enterprise-app/myproject/deploy/yamls-parameterized/kustomize/base/inventory-deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: inventory
    name: inventory
spec:
    replicas: 2
    selector:
        matchLabels:
            move2kube.konveyor.io/service: inventory
    strategy: {}
    template:
        metadata:
            creationTimestamp: null
            labels:
                move2kube.konveyor.io/service: inventory
            name: inventory
        spec:
            containers:
                - image: default-route-openshift-image-registry.apps-crc.testing/enterprise-app/inventory:latest
                  imagePullPolicy: Always
                  name: inventory
                  ports:
                    - containerPort: 8080
                  resources:
                    requests:
                        ephemeral-storage: "0"
                        memory: "0"
            restartPolicy: Always
            securityContext: {}
status: {}

...
