enterprise-app/myproject/deploy/yamls-parameterized/kustomize/base/inventory-service.yaml

---
apiVersion: v1
kind: Service
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: inventory
    name: inventory
spec:
    ports:
        - name: port-8080
          port: 8080
          targetPort: 8080
    selector:
        move2kube.konveyor.io/service: inventory
    type: ClusterIP
status:
    loadBalancer: {}

...
