enterprise-app/myproject/deploy/yamls-parameterized/kustomize/base/frontend-route.yaml

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: frontend
    name: frontend
spec:
    host: router-enterprise-app.apps-crc.testing
    path: /frontend
    port:
        targetPort: port-8080
    tls:
        termination: edge
    to:
        kind: Service
        name: frontend
        weight: 1
status:
    ingress:
        - {}

...
